[package]
name = "aezakmi"
version = "0.1.0"
authors = ["0Mayank <1mayanktomar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", default-features = true}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"