[package]
name = "aezakmi"
version = "0.1.0"
authors = ["0Mayank <1mayanktomar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
mongodb = "2.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true